Manage nginx config file

--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -12,21 +12,21 @@ server {
         proxy_cache_bypass $http_upgrade;
     }
 
-    # location /api {
-    #     proxy_pass http://127.0.0.1:8000;
-    #     proxy_http_version 1.1;
-    #     proxy_set_header Upgrade $http_upgrade;
-    #     proxy_set_header Connection 'upgrade';
-    #     proxy_set_header Host $host;
-    #     proxy_cache_bypass $http_upgrade;
-    # }
+    location /api {
+        proxy_pass http://symfony:8000;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
+    }
 
-    # location ~ \.php$ {
-    #     include fastcgi_params;
-    #     fastcgi_pass symfony:9000;
-    #     fastcgi_index index.php;
-    #     fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-    # }
+    location ~ \.php$ {
+        include fastcgi_params;
+        fastcgi_pass symfony:8000;
+        fastcgi_index index.php;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+    }
 
     location ~ /\.ht {
         deny all;
