--- a/symfony/Dockerfile
+++ b/symfony/Dockerfile
@@ -1,5 +1,7 @@
+# Use the official PHP 8.2 image with necessary extensions
 FROM php:8.2-cli
 
+# Install dependencies
 RUN apt-get update && apt-get install -y \
     git \
     unzip \
@@ -17,6 +19,7 @@ RUN apt-get update && apt-get install -y \
     bash \
     libpq-dev
 
+# Install the pdo_pgsql extension
 RUN docker-php-ext-install pdo pdo_pgsql
 
 # Install Symfony CLI
@@ -26,8 +29,10 @@ RUN mv /root/.symfony*/bin/symfony /usr/local/bin/symfony
 # Install Composer
 COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
 
+# Create and change to the app directory
 WORKDIR /var/www
 
+# Copy the app files
 COPY . .
 
 # Set COMPOSER_ALLOW_SUPERUSER to 1
@@ -36,7 +41,8 @@ ENV COMPOSER_ALLOW_SUPERUSER=1
 # Install Composer dependencies
 RUN composer install
 
+# Expose the port the app runs on
 EXPOSE 8000
 
-# Stop any running Symfony server and start a new one
-CMD ["bash", "-c", "symfony server:stop && symfony server:start --no-tls --port=8000 --dir=public"]
+# Run database migrations and start the Symfony server
+CMD php bin/console doctrine:migrations:migrate --no-interaction && symfony server:start --no-tls --port=8000 --dir=public
