--- a/.github/workflows/docker-compose.yml
+++ b/.github/workflows/docker-compose.yml
@@ -13,9 +13,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: publish
-        uses: pennsignals/publish_docker-compose@v0.1.0
-        with:
-          version: "0.2.6-rc.1" # optional
-          docker_compose: "../../docker-compose.yml" # required
-          repo_token: "${{ secrets.GITHUB_TOKEN }}"
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Set up Docker Compose
+        run: sudo apt-get update && sudo apt-get install docker-compose
+
+      - name: Build and run containers
+        run: docker-compose up --build -d
