--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,27 +1,30 @@
-name: Docker Image CI
+name: Docker Compose CI
 
 on:
   push:
-    branches: [ "main" ]
+    branches:
+      - main
   pull_request:
-    branches: [ "main" ]
+    branches:
+      - main
 
 jobs:
-
   build:
-
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
-    - name: Login Dockerhub
-      env:
-        DOCKER_USERNAME: ${{secrets.DOCKER_USERNAME}}
-        DOCKER_PASSWORD: ${{secrets.DOCKER_PASSWORD}}
-      run: docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
-      
-    - name: Build the Docker image
-      run: docker build -t cicd-pipeline .
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-    - name: Push to Dockerhub
-      run: docker push saedinia/cicd-pipeline:latest
+      - name: Login to DockerHub
+        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+
+      - name: Build and Push Backend (Symfony) image
+        run: |
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/task-management-app-backend:latest -f symfony/Dockerfile symfony/
+          docker push ${{ secrets.DOCKER_USERNAME }}/task-management-app-backend:latest
+
+      - name: Build and Push Frontend (Next.js) image
+        run: |
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/task-management-app-frontend:latest -f nextjs/Dockerfile nextjs/
+          docker push ${{ secrets.DOCKER_USERNAME }}/task-management-app-frontend:latest
