--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -11,9 +11,6 @@ jobs:
     runs-on: self-hosted
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
       - name: Login to DockerHub
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
@@ -34,35 +31,7 @@ jobs:
           sudo docker rm task-management-app-frontend-container || true
 
       - name: Run Backend container
-        run: sudo docker run -d --name task-management-app-backend-container ${{ secrets.DOCKER_USERNAME }}/task-management-app-backend:latest
+        run: sudo docker run -d --name task-management-app-backend-container -p 8000:8000 ${{ secrets.DOCKER_USERNAME }}/task-management-app-backend:latest
 
       - name: Run Frontend container
-        run: sudo docker run -d --name task-management-app-frontend-container ${{ secrets.DOCKER_USERNAME }}/task-management-app-frontend:latest
-
-      - name: Setup Nginx configuration
-        run: |
-          echo 'server {
-            listen 80;
-            server_name localhost;
-
-            location / {
-                proxy_pass http://task-management-app-frontend-container:3000;
-                proxy_http_version 1.1;
-                proxy_set_header Upgrade $http_upgrade;
-                proxy_set_header Connection "upgrade";
-                proxy_set_header Host $host;
-                proxy_cache_bypass $http_upgrade;
-            }
-
-            location /api {
-                proxy_pass http://task-management-app-backend-container:8000;
-                proxy_http_version 1.1;
-                proxy_set_header Upgrade $http_upgrade;
-                proxy_set_header Connection "upgrade";
-                proxy_set_header Host $host;
-                proxy_cache_bypass $http_upgrade;
-            }
-          }' | sudo tee /etc/nginx/sites-available/default
-
-      - name: Restart Nginx
-        run: sudo systemctl restart nginx
+        run: sudo docker run -d --name task-management-app-frontend-container -p 3000:3000 ${{ secrets.DOCKER_USERNAME }}/task-management-app-frontend:latest
