Fiexed bug - updated cd.yml

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -3,7 +3,7 @@ name: Docker Compose CD
 on:
   workflow_run:
     workflows: ["Docker Compose CI"]
-    type:
+    types:
       - completed
 
 jobs:
@@ -30,8 +30,11 @@ jobs:
           sudo docker stop task-management-app-frontend-container || true
           sudo docker rm task-management-app-frontend-container || true
 
+      - name: Run PostgreSQL container
+        run: sudo docker run -d --name task-management-postgres -e POSTGRES_USER=postgres -e POSTGRES_PASSWORD=postgres -e POSTGRES_DB=symfony -p 5432:5432 postgres:latest
+
       - name: Run Backend container
-        run: sudo docker run -d --name task-management-app-backend-container -p 8000:8000 ${{ secrets.DOCKER_USERNAME }}/task-management-app-backend:latest
+        run: sudo docker run -d --name task-management-app-backend-container --link task-management-postgres:postgres -p 8000:8000 ${{ secrets.DOCKER_USERNAME }}/task-management-app-backend:latest
 
       - name: Run Frontend container
         run: sudo docker run -d --name task-management-app-frontend-container -p 3000:3000 ${{ secrets.DOCKER_USERNAME }}/task-management-app-frontend:latest
