--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,4 +1,4 @@
-name: Docker Compose CD
+name: Deploy via SSH
 
 on:
   workflow_run:
@@ -105,7 +105,7 @@ jobs:
                 server_name localhost;
 
                 location / {
-                    proxy_pass http://nextjs:3000;
+                    proxy_pass http://127.0.0.1:3000;
                     proxy_http_version 1.1;
                     proxy_set_header Upgrade $http_upgrade;
                     proxy_set_header Connection 'upgrade';
@@ -114,7 +114,7 @@ jobs:
                 }
 
                 location /api {
-                    proxy_pass http://symfony:8000;
+                    proxy_pass http://127.0.0.1:8000;
                     proxy_http_version 1.1;
                     proxy_set_header Upgrade $http_upgrade;
                     proxy_set_header Connection 'upgrade';
@@ -124,7 +124,7 @@ jobs:
 
                 location ~ \.php$ {
                     include fastcgi_params;
-                    fastcgi_pass symfony:8000;
+                    fastcgi_pass 127.0.0.1:8000;
                     fastcgi_index index.php;
                     fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
                 }
