--- a/symfony/.env
+++ b/symfony/.env
@@ -27,7 +27,7 @@ APP_SECRET=b35b45938b271e886c7c359d10b82d27
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8.0.32&charset=utf8mb4"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
 # DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=16&charset=utf8"
-DATABASE_URL=postgresql://postgres:postgres@127.0.0.1:5432/symfony?serverVersion=16&charset=utf8
+DATABASE_URL=postgresql://postgres:postgres@127.0.0.1:5432/task-management?serverVersion=16&charset=utf8
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/messenger ###
